# seqorrmap

./: AUTHORS  ChangeLog  README  TODO  configure.ac
src/: Makefile.am  arg.c  arg.h  error.c  error.h  getcorr.c  getcorr.h  getpdb.c  getseq.c  getseq.h  mapcorr.c  mapcorr.h  matrix.c  matrix.h  pdb_structure.h  putmat.c  putmat.h  putpdb.c  putpdb.h  puttcl.c  puttcl.h  select.c  select.h  seq.h  seqorrmap.c  seqorrmap.h  vector.c
tests/: Makefile.am  test0.sh  test1.sh  test2.sh  test3.sh  test4.sh  test5.fasta  test5.sh
