#===============================================================================
# Makefile.am : for automake
#===============================================================================
#
noinst_DATA = \
	test0.dat \
	test1.dat \
	test2.dat \
	test3.dat \
	test4.dat \
	test5.dat \
	test5.fasta \
	1LKV.pdb

noinst_SCRIPTS = \
	test0.sh \
	test1.sh \
	test2.sh \
	test3.sh \
	test4.sh \
	test5.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

